--- a/app/src/main/res/layout/fragment_game_v3.xml
+++ b/app/src/main/res/layout/fragment_game_v3.xml
@@ -57,11 +57,8 @@
                     android:id="@+id/ll_sport_type"
                     android:layout_width="match_parent"
                     android:layout_height="88dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     android:background="@color/color_FCFCFC"
-                    android:gravity="center"
+                    android:gravity="center_horizontal"
                     tools:ignore="MissingConstraints">
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -69,7 +66,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:nestedScrollingEnabled="false"
-                        app:layout_constrainedWidth="true"
                         tools:itemCount="1"
                         tools:listitem="@layout/itemview_sport_type_v6" />
                 </LinearLayout>
