--- a/app/src/main/res/layout/fragment_my_favorite.xml
+++ b/app/src/main/res/layout/fragment_my_favorite.xml
@@ -64,7 +64,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:background="@color/color_FCFCFC"
+                    android:background="@color/color_191919_FCFCFC"
                     android:gravity="center"
                     app:layout_constraintTop_toBottomOf="@id/favorite_toolbar"
                     tools:ignore="MissingConstraints">
