--- a/app/src/main/res/layout/content_security_code_style_edittext.xml
+++ b/app/src/main/res/layout/content_security_code_style_edittext.xml
@@ -6,12 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <FrameLayout
         android:id="@+id/cv_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -86,8 +84,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    </androidx.cardview.widget.CardView>
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/ic_error"
