--- a/app/src/main/res/layout/view_bottom_navigation.xml
+++ b/app/src/main/res/layout/view_bottom_navigation.xml
@@ -178,7 +178,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@color/color_141414_F3F4F5"
-        app:layout_constraintBottom_toBottomOf="@+id/betListPaddingView"
+        app:layout_constraintBottom_toBottomOf="@+id/BottomNavBarPaddingView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -228,10 +228,15 @@
         app:layout_constraintTop_toBottomOf="@+id/img_pagcor_mark" />
 
     <View
-        android:id="@+id/betListPaddingView"
+        android:id="@+id/betListBarPaddingView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bet_list_bar_height"
         app:layout_constraintTop_toBottomOf="@+id/txv_copyright"
+        app:layout_constraintBottom_toTopOf="@+id/BottomNavBarPaddingView"/>
+    <View
+        android:id="@+id/BottomNavBarPaddingView"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bottom_nav_bar_height"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <androidx.constraintlayout.widget.Guideline
