--- a/app/src/main/res/layout/activity_profile_center.xml
+++ b/app/src/main/res/layout/activity_profile_center.xml
@@ -752,6 +752,7 @@
                             android:orientation="horizontal">
 
                             <ImageView
+                                android:id="@+id/iv_flag"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="10dp"
@@ -760,6 +761,7 @@
                                 android:src="@drawable/ic_change_language" />
                             <!--缺翻譯-->
                             <TextView
+                                android:id="@+id/tv_language"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
