--- a/app/src/main/res/layout/shimmer_home_card_placeholder_layout.xml
+++ b/app/src/main/res/layout/shimmer_home_card_placeholder_layout.xml
@@ -3,63 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="6dp"
+    android:layout_marginVertical="6dp"
     android:orientation="vertical"
-    android:paddingHorizontal="6dp"
-    android:paddingTop="6dp"
-    android:paddingBottom="2dp"
     tools:ignore="DisableBaselineAlignment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/card_first_game"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.602"
-            android:background="@drawable/bg_preload">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/card_second_game"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="6dp"
-            android:layout_weight="0.398"
-            android:background="@drawable/bg_preload">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="6dp">
+        android:layout_height="94dp">
 
         <View
-            android:layout_width="110dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/bg_preload" />
-
-        <View
-            android:layout_width="110dp"
+            android:layout_width="84dp"
             android:layout_height="match_parent"
             android:layout_marginStart="6dp"
             android:background="@drawable/bg_preload" />
 
         <View
-            android:layout_width="110dp"
+            android:layout_width="84dp"
             android:layout_height="match_parent"
             android:layout_marginStart="6dp"
             android:background="@drawable/bg_preload" />
 
         <View
-            android:layout_width="110dp"
+            android:layout_width="84dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="6dp"
+            android:background="@drawable/bg_preload" />
+
+        <View
+            android:layout_width="84dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="6dp"
+            android:background="@drawable/bg_preload" />
+
+        <View
+            android:layout_width="84dp"
             android:layout_height="match_parent"
             android:layout_marginStart="6dp"
             android:background="@drawable/bg_preload" />
