--- a/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
@@ -23,6 +23,7 @@
         android:background="@color/colorBackground">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_item_background_single"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/color_141414_F3F4F5"
