--- a/app/src/main/res/layout/sport_bottom_navigation.xml
+++ b/app/src/main/res/layout/sport_bottom_navigation.xml
@@ -10,6 +10,14 @@
     tools:layout_height="wrap_content">
 
     <org.cxct.sportlottery.ui.game.bottomNavigation.BottomNavigationItem
+        android:id="@+id/navigation_home"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        app:btiIcon="@drawable/ic_home"
+        app:btiTitle="@string/bottom_nav_home" />
+
+    <org.cxct.sportlottery.ui.game.bottomNavigation.BottomNavigationItem
         android:id="@+id/navigation_sport"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -22,74 +30,9 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:visibility="gone"
         app:btiIcon="@drawable/ic_navigation_star"
         app:btiTitle="@string/my_favorite" />
-
-
-    <FrameLayout
-        android:layout_width="67dp"
-        android:layout_height="match_parent"
-        android:visibility="gone">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/item_bet_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/color_317FFF_0760D4"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_bet_count"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="-3dp"
-                android:gravity="center"
-                android:includeFontPadding="false"
-                android:text="0"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/textSize22sp"
-                app:layout_constraintBottom_toTopOf="@id/tv_bet"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed" />
-
-            <TextView
-                android:id="@+id/tv_bet"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|bottom"
-                android:layout_marginBottom="5dp"
-                android:gravity="center"
-                android:maxLines="1"
-                android:text="@string/bet_info_list_title"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/textSize11sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_bet_count" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/laExplo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="top"
-            android:layout_marginBottom="@dimen/margin_10"
-            android:alpha="0.3"
-            android:scaleX="2.0"
-            android:scaleY="2.0"
-            android:visibility="gone"
-            app:lottie_autoPlay="false"
-            app:lottie_imageAssetsFolder="lottie/"
-            app:lottie_loop="false"
-            app:lottie_rawRes="@raw/ripple"
-            app:lottie_speed="3.2" />
-
-    </FrameLayout>
 
     <org.cxct.sportlottery.ui.game.bottomNavigation.BottomNavigationItem
         android:id="@+id/navigation_account_history"
