--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -213,6 +213,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
+                app:hintText="@string/hint_default_birth"
                 app:iconSignifier="@drawable/ic_birthday"
                 app:isResponsiveIconColor="false"
                 app:labelText="@string/birth_date"
@@ -222,7 +223,7 @@
                 app:primaryColor="@color/color_AFAFB1">
 
                 <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
-                    android:id="@+id/ettBirth"
+                    android:id="@+id/eetBirth"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
