[新增] 註冊頁面下拉選單欄位箭頭

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -275,6 +275,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
+                app:endIcon="@drawable/ic_arrow_gray"
                 app:iconSignifier="@drawable/ic_income_source"
                 app:isResponsiveIconColor="false"
                 app:labelText="@string/income_source"
@@ -311,6 +312,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 app:iconSignifier="@drawable/ic_betting_shop"
+                app:endIcon="@drawable/ic_arrow_gray"
                 app:isResponsiveIconColor="false"
                 app:labelText="@string/betting_shop"
                 app:labelTextStyle="normal"
