--- a/app/src/main/res/layout/dialog_redenvelope_fail.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_fail.xml
@@ -4,10 +4,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:layout_gravity="center"
     android:gravity="center_horizontal">
 <FrameLayout
     android:layout_width="280dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
