--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -81,6 +81,7 @@
     <color name="color_2b2b2b_ffffff">@color/color_2B2B2B</color>
     <color name="color_1f1f1f_f7f8fa">@color/color_1F1F1F</color>
     <color name="color_3d3d3d_dddddd">@color/color_3d3d3d</color>
+    <color name="color_cccccc_333333">@color/color_cccccc</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
