--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -180,6 +180,7 @@
     <color name="color_1f1f1f_f7f8fa">@color/color_f7f8fa</color>
     <color name="color_3d3d3d_dddddd">@color/color_dddddd</color>
     <color name="color_cccccc_333333">@color/color_333333</color>
+    <color name="color_212121_ffffff">@color/color_FFFFFF</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_DE000000</color>
