--- a/app/src/main/res/layout/fragment_register_credentials.xml
+++ b/app/src/main/res/layout/fragment_register_credentials.xml
@@ -30,8 +30,7 @@
             android:id="@+id/tvUploadTip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="@dimen/margin_10"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
             android:drawableLeft="@drawable/ic_tip_red"
             android:drawablePadding="@dimen/margin_4"
@@ -39,13 +38,12 @@
             android:textColor="@color/color_D65752"
             android:textSize="@dimen/textSize12sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_identity_doc" />
+            app:layout_constraintTop_toBottomOf="@+id/view_identity_photo" />
 
         <TextView
             android:id="@+id/tvUploadTip2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
             android:layout_marginTop="@dimen/margin_10"
             android:drawableLeft="@drawable/ic_tip_red"
             android:drawablePadding="@dimen/margin_4"
@@ -59,28 +57,14 @@
             android:id="@+id/view_identity_photo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            app:layout_constraintTop_toBottomOf="@id/tvUploadTip2" />
-
-        <TextView
-            android:id="@+id/tvUploadTip3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="@dimen/margin_10"
-            android:drawableLeft="@drawable/ic_tip_red"
-            android:drawablePadding="@dimen/margin_4"
-            android:text="@string/upload_photo_tips"
-            android:textColor="@color/color_D65752"
-            android:textSize="@dimen/textSize12sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_identity_photo" />
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/view_identity_doc" />
 
         <Button
             android:id="@+id/btn_submit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="44dp"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_20_button_dusk"
             android:minWidth="0dp"
@@ -94,7 +78,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@id/btn_reset"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvUploadTip3" />
+            app:layout_constraintTop_toBottomOf="@id/tvUploadTip2" />
 
         <Button
             android:id="@+id/btn_reset"
